--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Globle: Daily Country Guessing</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="globle.js"></script>
-    <!--Tu promijeniti iz globle.js u globle.php sta god vec, koristimo bazapodataka.phsql-->
+    <!--Tu promijeniti iz globle.js u globle.php sta god vec, koristimo bazapodataka.pgsql-->
 </head>
 
 <body>
