dodavanje css stila

--- a/start.html
+++ b/start.html
@@ -19,7 +19,11 @@
       </nav>
     </div>
       <div id="Home">
-        Dobrodošli na ovu stranicu blabla gl hf
+        <p>
+        Dobrodošli na igru Globle guessing game menu. 
+        Ovdje možete odabrati koju od dviju igri želite igrati.
+        ispod svake igre 
+      </p>
       </div>
 
 
@@ -27,9 +31,9 @@
         <img src="index.jpeg" alt="">
         <p>
             <a href="index.html">
-        <button>igraj Game1</button>
+        <button id="gamebutton">igraj Game1</button>
     </a>
-        <p>Opis igre1</p>
+        <p>U ovoj igri imate 5 pokušaja da pogodite zemlju koju je računalo zamislilo, na početku dobijete 1 hint i svakim dodatnim pokušajem se otkriva dodatni hint kako bi vam olakšao</p>
       </div>
       <br>
       <br>
@@ -37,7 +41,7 @@
         <img src="index.jpeg" alt="">
         <p>
         <a href="index.html">
-        <button>igraj Game2</button>
+        <button id="gamebutton">igraj Game2</button>
     </a>
         <p>Opis igre2</p>
       </div>
