dodana druga_igra.html

--- a/start.html
+++ b/start.html
@@ -1,54 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guessing game</title>
-    <link rel="stylesheet" type="text/css" href="styleZaMain.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Guessing game</title>
+  <link rel="stylesheet" type="text/css" href="styleZaMain.css" />
 </head>
+
 <body>
-    <div id="navbarid">
+  <div id="navbarid">
     <nav id="navbar">
-        <ul>
-          <li><a href="#Home">Home</a></li>
-          <li><a href="#Game1">Game 1</a></li>
-          <li><a href="#Game2">Game 2</a></li>
-          <li><a href="#About">About</a></li>
-        </ul>
-      </nav>
-    </div>
-      <div id="Home">
-        <p>
-        Dobrodošli na igru Globle guessing game menu. 
-        Ovdje možete odabrati koju od dviju igri želite igrati.
-        ispod svake igre 
-      </p>
-      </div>
+      <ul>
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#Game1">Game 1</a></li>
+        <li><a href="#Game2">Game 2</a></li>
+        <li><a href="#About">About</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div id="Home">
+    <p>
+      Dobrodošli na igru Globle guessing game menu.
+      Ovdje možete odabrati koju od dviju igri želite igrati.
+      ispod svake igre
+    </p>
+  </div>
 
 
-      <div id="Game1">
-        <img src="index.jpeg" alt="">
-        <p>
-            <a href="index.html">
+  <div id="Game1">
+    <img src="index.jpeg" alt="">
+    <p>
+      <a href="index.html">
         <button id="gamebutton">igraj Game1</button>
-    </a>
-        <p>U ovoj igri imate 5 pokušaja da pogodite zemlju koju je računalo zamislilo, na početku dobijete 1 hint i svakim dodatnim pokušajem se otkriva dodatni hint kako bi vam olakšao</p>
-      </div>
-      <br>
-      <br>
-      <div id="Game2">
-        <img src="index.jpeg" alt="">
-        <p>
-        <a href="index.html">
+      </a>
+    <p>U ovoj igri imate 5 pokušaja da pogodite zemlju koju je računalo zamislilo, na početku dobijete 1 hint i svakim
+      dodatnim pokušajem se otkriva dodatni hint kako bi vam olakšao</p>
+  </div>
+  <br>
+  <br>
+  <div id="Game2">
+    <img src="index.jpeg" alt="">
+    <p>
+      <a href="druga_igra.html">
         <button id="gamebutton">igraj Game2</button>
-    </a>
-        <p>Opis igre2</p>
-      </div>
+      </a>
+    <p>Opis igre2</p>
+  </div>
 
-      <div id="About">
-        Ovo su napravila 3 ritehovca skroz sami bez ikakve pomoci openaia
-      </div>
-      
+  <div id="About">
+    Ovo su napravila 3 ritehovca skroz sami bez ikakve pomoci openaia
+  </div>
+
 </body>
+
 </html>
