--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <div class="col-md-6 col-md-offset-3">
                 <h2>Mystery Country Clues:</h2>
                 <ul id="clues-list" class="list-group">
-                    <li id="hint1" class="list-group-item" style="display: none"></li>
-                    <li id="hint2" class="list-group-item" style="display: none"></li>
-                    <li id="hint3" class="list-group-item" style="display: none"></li>
-                    <li id="hint4" class="list-group-item" style="display: none"></li>
-                    <li id="hint5" class="list-group-item" style="display: none"></li>
+                    <li id="hint1" class="list-group-item" ></li>
+                    <li id="hint2" class="list-group-item" ></li>
+                    <li id="hint3" class="list-group-item" ></li>
+                    <li id="hint4" class="list-group-item" ></li>
+                    <li id="hint5" class="list-group-item" ></li>
                 </ul>
                 <form>
                     <div class="form-group">
