--- a/druga_igra.html
+++ b/druga_igra.html
@@ -2,15 +2,26 @@
 <html>
     <head>
         <title>Drug igra</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="style_drugaigra.css" />
         <script src="secondGame.js"></script>
     </head>
 
     <body>
-        <label for="guess-input">Enter your guess:</label>
-        <input type="text" id="guess-input" />
-        <button id="guess-button">Submit Guess</button>
-        <p id="result-message"></p>
+        <div id="centriraj">
+        <h1 class="text-center text-primary">Globle: Daily Country Guessing</h1>                    
+                        <label for="guess-input" class="tekst_pogadanja">Enter your guess:</label>
+                        <input type="text" class="form-control" id="guess-input">
+                        <p id="result-message"></p>
+                    <button type="submit" id="guess-button" class="btn btn-primary">Submit Guess</button>
+                
+                <br>
+                <p id="result-message" class="alert"></p>
+                <a href="index.html">
+                    <div id="retry" class="btn btn-danger">Retry</div>
+                </a>
+            </div>
     </body>
     
 </html>
