napravljena druga igra

--- a/index.html
+++ b/index.html
@@ -26,18 +26,22 @@
                     <li id="hint4" class="list-group-item" ></li>
                     <li id="hint5" class="list-group-item" ></li>
                 </ul>
+                <div id="file">
                 <form>
                     <div class="form-group">
                         <label for="guess-input" class="tekst_pogadanja">Enter your guess:</label>
                         <input type="text" class="form-control" id="guess-input">
                     </div>
+                    <div align = center>
                     <button type="submit" id="guess-button" class="btn btn-primary">Submit Guess</button>
+                </div>
                 </form>
                 <br>
                 <p id="result-message" class="alert"></p>
                 <a href="index.html">
                     <div id="retry" class="btn btn-danger">Retry</div>
                 </a>
+            </div>
             </div>
         </div>
     </div>
