--- a/start.html
+++ b/start.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Guessing game</title>
   <link rel="stylesheet" type="text/css" href="styleZaMain.css" />
+  
+
 </head>
 
 <body>
@@ -50,7 +52,7 @@
   </div>
 
   <div id="About">
-    Ovo su napravila 3 ritehovca skroz sami bez ikakve pomoci openaia
+    About
   </div>
 
 </body>
